(lang dune 3.2)

(name ocaml_problems)

(generate_opam_files true)

(source
 (github joshniec/ocaml_problems))

(authors "Josh Niec")

(maintainers "Josh Niec <josh@niec.us>")

(license MIT)

(documentation https://github.com/joshniec/ocaml_problems)

(package
 (name ocaml_problems)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
